Remove racy and unused debug code qsg_test_and_clear_material_failure()

In case of multiple windows, the function is called from different
render threads, so TSAN pointed out the race condition in this code.

But the whole thing is dead code anyway, nothing calls qsg_set_material_failure()
anymore, since commit 3f5e21a0cc9f41f1747e5c431695e7798ee489db in 2020.

Fixes: QTBUG-134492
Change-Id: Ifd913db3099a1477159d431dd30412082ed59c7a
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit deadb187b13ee2cb25dfc4d5c8b143f86b1792af)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 2f9820d187c8ddf64893bad1c078b4df86c0554a)
(cherry picked from commit 54ab99b1a56be25089f96ad8ebb6de0637ddae99)
Reviewed-by: Marc Mutz <marc.mutz@qt.io>